--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,6 +28,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '17'
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
