--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,23 @@ jobs:
           version: v1.43.0
           skip-go-installation: true
 
+  generate:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '17'
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1
+    - name: Generate
+      run: go generate ./...
+    - name: Check no diff after generating
+      run: git diff --exit-code
+
   build:
     runs-on: ubuntu-latest
     steps:
