--- a/.github/workflows/starbridge.yml
+++ b/.github/workflows/starbridge.yml
@@ -40,4 +40,4 @@ jobs:
       with:
         go-version: ${{ matrix.go }}
 
-    - run: go test -race -timeout 25m -v ./services/horizon/internal/integration/...
+    - run: go test -race -timeout 25m -v ./integration/...
