--- a/solidity/package.json
+++ b/solidity/package.json
@@ -10,14 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.4",
-    "@nomiclabs/hardhat-waffle": "^2.0.2",
-    "@openzeppelin/contracts": "^4.4.2",
-    "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.3",
-    "hardhat": "^2.8.3",
-    "mocha": "^9.2.0",
-    "solidity-coverage": "^0.7.18"
+    "@nomiclabs/hardhat-ethers": "2.0.4",
+    "@nomiclabs/hardhat-waffle": "2.0.2",
+    "@openzeppelin/contracts": "4.4.2",
+    "chai": "4.3.6",
+    "ethereum-waffle": "3.4.0",
+    "ethers": "5.5.3",
+    "hardhat": "2.8.3",
+    "mocha": "9.2.0",
+    "solidity-coverage": "0.7.18"
   }
 }
