Implement changes connected to cancelation flow (#54)

--- a/starbridge_example.cfg
+++ b/starbridge_example.cfg
@@ -1,4 +1,5 @@
 port=8000
 admin_port=6060
+horizon_url="https://horizon-testnet.stellar.org"
 postgres_dsn="postgres://localhost:5432/starbridge?sslmode=disable"
 main_account_id="GD6FUM7LF762FFNT2R6JBGX6ME6KXUO7P4FRVFZZR25OMIUGHFSFT66R"
