--- a/solidity/package.json
+++ b/solidity/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "2.0.4",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "2.0.2",
     "@openzeppelin/contracts": "4.4.2",
     "chai": "4.3.6",
