--- a/react-web/Makefile
+++ b/react-web/Makefile
@@ -2,7 +2,7 @@
 
 
 help:
-	@echo "Usage: make [build|start|start_dev|test|storybook|build_storybook|lint|format_code"
+	@echo "Usage: make [build|start|start_dev|test|lint|format_code"
 	@echo ""
 	@echo "Usage:"
 	@echo "  make build  	        Builds the frontend for production and copies it to the dist folder"
@@ -10,8 +10,6 @@ help:
 	@echo "  make start_dev         Starts the frontend in development mode"
 	@echo "  make test  	        Runs the frontend tests"
 	@echo "  make coverage-test     Run tests on the project and generates a coverage report."
-	@echo "  make storybook         Starts the storybook"
-	@echo "  make build_storybook   Builds the storybook"
 	@echo "  make lint  	        Runs the frontend linter"
 	@echo "  make format_code       Formats the frontend code with prettier and fix the code style"
 	@echo ""
@@ -33,12 +31,6 @@ test: setup
 
 coverage-test: setup
 	npm run test -- --coverage
-
-storybook: setup
-	npm run storybook
-
-build-storybook: setup
-	npm run build-storybook
 
 lint: setup
 	npm run lint
