--- a/react-web/package.json
+++ b/react-web/package.json
@@ -20,16 +20,6 @@
     "yup": "~0.32.11"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "~6.5.9",
-    "@storybook/addon-actions": "~6.5.9",
-    "@storybook/addon-docs": "~6.5.9",
-    "@storybook/addon-essentials": "~6.5.9",
-    "@storybook/addon-links": "~6.5.9",
-    "@storybook/builder-webpack5": "^6.5.10",
-    "@storybook/manager-webpack5": "^6.5.10",
-    "@storybook/node-logger": "~6.5.9",
-    "@storybook/preset-create-react-app": "~4.1.2",
-    "@storybook/react": "~6.5.9",
     "@testing-library/jest-dom": "~5.16.4",
     "@testing-library/react": "~13.3.0",
     "@testing-library/user-event": "~14.3.0",
@@ -68,9 +58,7 @@
     "eject": "react-scripts eject",
     "lint:staged": "lint-staged",
     "lint": "eslint --ext .ts,.tsx src/",
-    "prettier": "prettier --write src/**/*.{js,jsx,ts,tsx,json,css,scss,md}",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "prettier": "prettier --write src/**/*.{js,jsx,ts,tsx,json,css,scss,md}"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
