--- a/react-web/package.json
+++ b/react-web/package.json
@@ -13,6 +13,7 @@
     "react": "~18.2.0",
     "react-dom": "~17.0.2",
     "react-hook-form": "~7.33.1",
+    "react-modal": "^3.15.1",
     "react-router-dom": "~6.3.0",
     "react-scripts": "~5.0.1",
     "sass": "~1.54.0",
@@ -30,6 +31,7 @@
     "@types/node-sass": "~4.11.3",
     "@types/react": "~18.0.15",
     "@types/react-dom": "~18.0.6",
+    "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "~5.1.7",
     "@types/sinon": "~10.0.13",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
