feat: create wallet connect interface

--- a/react-web/package.json
+++ b/react-web/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "@hookform/resolvers": "~2.9.6",
     "@stellar/design-system": "^0.8.1",
+    "@walletconnect/client": "^1.8.0",
+    "@walletconnect/qrcode-modal": "^1.8.0",
     "axios": "~0.27.2",
+    "buffer": "^6.0.3",
     "classnames": "~2.3.1",
     "env-cmd": "~10.1.0",
     "jest-canvas-mock": "~2.4.0",
