--- a/react-web/Dockerfile
+++ b/react-web/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 ENV PATH /app/node_modules/.bin:$PATH
 
-COPY package.json /app/package.json
+COPY . /app
 RUN npm install --silent
 
 CMD ["npm", "start"]
