--- a/react-web/package.json
+++ b/react-web/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "~6.3.0",
     "react-scripts": "~5.0.1",
     "sass": "~1.54.0",
+    "stellar-sdk": "^10.3.0",
     "typescript": "~4.7.4",
     "yup": "~0.32.11"
   },
