--- a/react-web/src/config/.env.example
+++ b/react-web/src/config/.env.example
@@ -1,2 +1,3 @@
-REACT_APP_API_URL="https://api.ckl.tools"
-REACT_APP_SENTRY_DSN="https://examplePublicKey@o0.ingest.sentry.io/0"
+STARBRIDGE_VALIDATOR_URL_1=""
+STARBRIDGE_VALIDATOR_URL_2=""
+STARBRIDGE_VALIDATOR_URL_3=""
