refactor: change docker start command

--- a/react-web/Dockerfile
+++ b/react-web/Dockerfile
@@ -7,4 +7,4 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY . /app
 RUN npm install --silent
 
-CMD ["npm", "start"]
+CMD ["npm", "run", "start:dev"]
