--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,6 +35,9 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1
+    - name: Set up Rust
+      uses: stellar/actions/rust-cache@main
+      run: rustup update && rustup target add wasm32-unknown-unknown
     - name: Generate
       run: go generate ./...
     - name: Check no diff after generating
