--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,6 +37,7 @@ jobs:
         go-version: 1
     - name: Set up Rust
       uses: stellar/actions/rust-cache@main
+    - name: Add wasm32 rust target
       run: rustup update && rustup target add wasm32-unknown-unknown
     - name: Generate
       run: go generate ./...
