--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@ version: "3.9"
 services:
   backend:
     container_name: starbridge-backend
+    networks:
+      - host
     build:
       context: .
       dockerfile: Dockerfile
@@ -19,3 +21,8 @@ services:
       - '3001:3000'
     environment:
       - NODE_ENV=development
+
+networks:
+  host:
+    name: host
+    external: true
