--- a/react-web/src/config/.env.example
+++ b/react-web/src/config/.env.example
@@ -1,2 +1,7 @@
-REACT_APP_API_URL="https://api.ckl.tools"
-REACT_APP_SENTRY_DSN="https://examplePublicKey@o0.ingest.sentry.io/0"
+REACT_APP_STARBRIDGE_VALIDATOR_URL_1=""
+REACT_APP_STARBRIDGE_VALIDATOR_URL_2=""
+REACT_APP_STARBRIDGE_VALIDATOR_URL_3=""
+REACT_APP_ETHEREUM_BRIDGE_ACCOUNT=""
+REACT_APP_STELLAR_BRIDGE_ACCOUNT=""
+REACT_APP_STELLAR_SERVER_URL=""
+REACT_APP_STELLAR_NETWORK=""
