--- a/react-web/src/config/.env.example
+++ b/react-web/src/config/.env.example
@@ -2,5 +2,6 @@ REACT_APP_STARBRIDGE_VALIDATOR_URL_1=""
 REACT_APP_STARBRIDGE_VALIDATOR_URL_2=""
 REACT_APP_STARBRIDGE_VALIDATOR_URL_3=""
 REACT_APP_ETHEREUM_BRIDGE_ACCOUNT=""
+REACT_APP_ETHEREUM_TOKEN_ACCOUNT=""
 REACT_APP_STELLAR_BRIDGE_ACCOUNT=""
 REACT_APP_STELLAR_SERVER_URL=""
