--- a/starbridge_example.cfg
+++ b/starbridge_example.cfg
@@ -13,3 +13,4 @@ ethereum_bridge_config_version=0
 stellar_asset="EUR:GAJKCRY6CIOXRIVK55ALOOJA327XN4JZ5KKN7YCTT3WM5W6BMFXMVQC2"
 ethereum_token="0x31995201773da53f950f15278ea1538ea37a68a1"
 stellar_to_ethereum="1"
+stellar_to_concordium="1"
